Fixed z-indexing for error messages. Changed why_pawbookings to match .psd exactly.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -51,7 +51,7 @@ table, th, td {
 
 .flash_notice_div {
   position: fixed;
-  z-index: 2;
+  z-index: 4;
   width:100%;
 }
 
