--- a/app/assets/stylesheets/home.css
+++ b/app/assets/stylesheets/home.css
@@ -204,6 +204,12 @@
     padding-bottom: 3em;
   }
 
+  .icon_div {
+    margin-left: 0;
+    margin-right: 0;
+    margin-top: 3em;
+  }
+
   .testimonial_mobile, .kennel_or_customer_mobile {
     display: none;
   }
@@ -225,10 +231,8 @@
   }
 
   .why_features_details {
-    padding-left: 3em;
-    padding-right: 3em;
     font-size: 1em;
-    line-height: 2.5em;
+    line-height: 1.8em;
   }
 
   .testimonial_row {
